@@ -1,5 +1,11 @@
 2019-02-23  Jonathan Wakely  <jwakely@redhat.com>
 
+	* include/std/type_traits (__underlying_type_impl): New helper to
+	make underlying_type SFINAE-friendly.
+	(underlying_type): Derive from __underlying_type_impl.
+	* testsuite/20_util/underlying_type/requirements/typedefs-3.cc: New
+	test.
+
 	PR libstdc++/89446
 	* include/bits/char_traits.h (__constant_char_array): Check index is
 	in range before dereferencing.
